# SDR

./: .gitignore  .mcp.json  CLAUDE.md  adsb.py  aprs.py  audio.py  bands.py  demod.py  digital.py  ism.py  pager.py  pyproject.toml  scanner.py  sdr.py  sdr_server.py  smart_tune.py  spectrum.py  trunking.py  web.py
scripts/: listen_fm.py  scan_bands.py  test_dongle.py
static/: app.js  index.html  style.css
